@@ -88,5 +88,14 @@ describe Admin::UsersController do
     response.should redirect_to(admin_users_url)
     flash[:error].should match(/cannot.*self/i)
     User.find(user.id).should_not be_nil
+  end 
+
+  it "should not allow admin to remove her own admin privilege" do
+    user = users(:admin)
+    login_as user
+    put :update, { :id => user.id, :user => {:admin => false} }
+    response.should redirect_to(admin_users_url)
+    flash[:error].should match(/cannot remove yourself from the admin role/i)
+    User.find(user.id).admin.should be_true
   end  
 end
